--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "Robert Bratucu <robert.bratucu@gmail.com>"
   ],
   "engines": {
-    "node": ">=14.15.1",
-    "npm": ">=6.14.9"
+    "node": ">=15.6.0",
+    "npm": ">=7.4.2"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.4",
-    "@hookform/resolvers": "^1.3.2",
+    "@emotion/react": "^11.1.5",
+    "@hookform/resolvers": "^1.3.5",
     "@lekoarts/gatsby-theme-styleguide": "^1.1.18",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -24,43 +24,44 @@
     "@theme-ui/preset-base": "^0.3.5",
     "fontsource-esteban": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
-    "gatsby": "^2.30.1",
-    "gatsby-image": "^2.9.0",
-    "gatsby-plugin-emotion": "^5.2.0",
-    "gatsby-plugin-manifest": "^2.10.0",
-    "gatsby-plugin-mdx": "^1.8.0",
-    "gatsby-plugin-netlify-cms": "^4.8.0",
-    "gatsby-plugin-offline": "^3.8.0",
-    "gatsby-plugin-react-helmet": "^3.8.0",
-    "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby": "^2.32.3",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-emotion": "^5.4.0",
+    "gatsby-plugin-manifest": "^2.12.0",
+    "gatsby-plugin-mdx": "^1.10.0",
+    "gatsby-plugin-netlify-cms": "^4.10.0",
+    "gatsby-plugin-offline": "^3.10.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sharp": "^2.14.1",
     "gatsby-plugin-theme-ui": "^0.3.5",
-    "gatsby-remark-images": "^3.9.0",
-    "gatsby-source-filesystem": "^2.9.0",
-    "gatsby-transformer-sharp": "^2.10.0",
-    "netlify-cms-app": "^2.14.11",
+    "gatsby-remark-images": "^3.11.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-sharp": "^2.12.0",
+    "netlify-cms-app": "^2.14.21",
     "prop-types": "^15.7.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.14.1",
-    "react-share": "^4.3.1",
+    "react-hook-form": "^6.15.4",
+    "react-icons": "^4.2.0",
+    "react-share": "^4.4.0",
     "react-toggle-dark-mode": "^1.0.3",
     "theme-ui": "^0.3.5",
-    "yup": "^0.32.8"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@emotion/eslint-plugin": "^11.0.0",
-    "commitizen": "^4.2.2",
+    "@emotion/eslint-plugin": "^11.2.0",
+    "commitizen": "^4.2.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.17.0",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-mdx": "^1.8.2",
+    "eslint-plugin-mdx": "^1.9.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.7",
-    "lint-staged": "^10.5.3"
+    "husky": "^4.3.8",
+    "lint-staged": "^10.5.4"
   },
   "keywords": [
     "gatsby"
