--- a/package.json
+++ b/package.json
@@ -3,65 +3,51 @@
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "1.0.0",
-  "authors": [
+  "author": "TED Vortex <ted.vortex@gmail.com>",
+  "contributors": [
     "TED Vortex <ted.vortex@gmail.com>",
-    "Robert Bratucu <robert.bratucu@gmail.com>"
+    "Robert Bratucu <robert.bratucu@gmail.com>",
+    "Eduard-Constantin Stoica <eduard.stoica@student.manchester.ac.uk>"
   ],
   "engines": {
-    "node": ">=15.6.0",
+    "node": ">=14.16.1",
     "npm": ">=7.4.2"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.5",
-    "@hookform/resolvers": "^1.3.5",
-    "@lekoarts/gatsby-theme-styleguide": "^1.1.18",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@mdx-js/tag": "^0.20.3",
-    "@theme-ui/color-modes": "^0.3.5",
-    "@theme-ui/components": "^0.3.5",
-    "@theme-ui/core": "^0.3.5",
-    "@theme-ui/preset-base": "^0.3.5",
     "fontsource-esteban": "^4.0.0",
     "fontsource-montserrat": "^4.0.0",
-    "gatsby": "^3.0.3",
-    "gatsby-image": "^2.11.0",
-    "gatsby-plugin-emotion": "^6.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-mdx": "^2.0.0",
-    "gatsby-plugin-netlify-cms": "^5.0.0",
-    "gatsby-plugin-offline": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-theme-ui": "^0.3.5",
-    "gatsby-remark-images": "^4.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
-    "netlify-cms-app": "^2.14.26",
+    "gatsby": "^3.4.2",
+    "gatsby-image": "^3.4.0",
+    "gatsby-plugin-manifest": "^3.4.0",
+    "gatsby-plugin-mdx": "^2.4.0",
+    "gatsby-plugin-offline": "^4.4.0",
+    "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-sharp": "^3.4.2",
+    "gatsby-remark-images": "^5.1.0",
+    "gatsby-source-filesystem": "^3.4.0",
+    "gatsby-transformer-sharp": "^3.4.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-share": "^4.4.0",
-    "react-toggle-dark-mode": "^1.0.3",
-    "theme-ui": "^0.3.5",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@emotion/eslint-plugin": "^11.2.0",
-    "commitizen": "^4.2.3",
+    "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.21.0",
+    "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-mdx": "^1.9.0",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-mdx": "^1.13.0",
+    "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^11.0.0"
   },
   "keywords": [
     "gatsby"
