--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "gatsby-image": "^3.4.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-mdx": "^2.4.0",
-    "gatsby-plugin-offline": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
+    "gatsby-plugin-sass": "^4.6.0",
     "gatsby-plugin-sharp": "^3.4.2",
     "gatsby-remark-images": "^5.1.0",
     "gatsby-source-filesystem": "^3.4.0",
@@ -34,13 +34,15 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-share": "^4.4.0",
-    "yup": "^0.32.9"
+    "sass": "^1.34.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.26.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-mdx": "^1.13.0",
